src/stylesheets/main.scss
/* 
 *
 * !VARIABLES
 *
 */

$default-color: #111;
$secondary-color: #f2f0de;
$emphasis-color: gold;
$emphasis-color-dark: #ceac00;
$content-color: #1A1E24;
$content-color-light: #272c35;
$content-color-super-light: #3e4654;
$content-color-trans: rgba(26, 30, 36, 0.7); 
$dmg-color: #e06464;
$overlay-color-dark: rgb(26, 30, 36);
$new-top-color: #3dce38;
$old-top-color: #ceac00;
$region-top-color: #e06464;
$header-padding: 10px;

/* 
 *
 * !IMPORTS
 *
 */

@import "normalize";
@import "nprogress";

/* 
 *
 * !STYLES
 *
 */

// !GENERAL

@-ms-viewport {
	width: device-width;
}

* {
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	box-sizing: border-box;
	margin: 0;
	padding: 0;
	-webkit-font-smoothing: antialiased;
}

html {
	font-family: 'Alegreya', serif;
	min-height: 100%;
	position: relative;
	padding-bottom: 20em;
	height: 100%;
}

body {
	background-color: $default-color;
}

h1 {
	font-size: 5em;
	letter-spacing: -6px;
	margin: 0;
}

h2 {
	font-size: 3em;
	margin: 0;
}

h3 {
	font-size: 1.5em;
	margin: 0;
}

ul {
	list-style: none;
}

a {
	text-decoration: none;
	color: $emphasis-color;
	transition: all 0.3s;

	&:hover {
		text-decoration: underline;
	}
}

input[type="text"] {
	display: block;
	margin: 0;
	appearance: none;
	box-shadow: none;
	border-radius: none;

	&:focus {
		outline: none;
	}
}

.emphasis {
	color: $emphasis-color;
}

.thumbnail-container {
	width: 64px;
	height: 64px;
	vertical-align: center;
	margin-right: 5px;

	img {
		width: 100%;
		border-radius: 3px;
	}
}

// !HEADER

header {
	position: absolute;
	z-index: 10;
	width: 100%;
	top: 0;
	left: 0;
	display: flex;
	justify-content: space-between;
	padding: 1em;
	background-color: $content-color-trans;
	color: $secondary-color;

	ul {
		display: flex;
		width: 150px;
		justify-content: flex-end;
		padding: $header-padding;

		li {
			margin-left: 1em;
			display: flex;
			align-items: center;
		}

		a {

			&:hover {
				color: $emphasis-color;
			}
		}
	}

	a {
		color: $secondary-color;
	}
	
	.search {
		position: relative;
		width: 250px;

		input[type="text"] {
			background-color: $content-color-light;
			color: $secondary-color;
			padding: $header-padding;
			width: 100%;
			border: 0;
			border-bottom: solid 1px $default-color;
			transition: border 0.3s;

			&:focus {
				border-bottom: solid 1px $emphasis-color-dark;
			}
		}

		.drop-down {
			position: absolute;
			top: $header-padding;
			right: $header-padding;
			color: $emphasis-color-dark;

			select {
				background: $content-color-light;
				border-radius: 0;
				border: 0;
	     		outline: 1px solid $content-color-light;
	     		appearance: none;
	     		padding: 0 5px;

	     		&:focus {
	     			outline: 1px solid $content-color-light;
	     		}

	     		&:hover {
	     			cursor: pointer;
	     		}
			}

			.drop-arrow {
				font-size: 0.5em;
			}
		}

		.search-result {
			position: absolute;
			width: 100%;
			background-color: $content-color;
			display: flex;
			align-items: center;
			padding: $header-padding;

			span {
				
				&.name {
					
				}

				&.level {
					margin-left: auto;
				}
			}

			.thumbnail-container {
				width: 45px;
				height: 45px;
				vertical-align: middle;

				img {
					width: 100%;
				}
			}

			&:hover {
				background-color: $content-color-super-light;
				cursor: pointer;
			}

			&.selected {
				background-color: $content-color-super-light;
			}
		}
	}
	
	.logo {
		width: 150px;
		padding: $header-padding;
	}
}

// !MAIN

main {
	margin-bottom: 2em;
}

// !SPLASH

.splash {
	display: flex;
	justify-content: center;
	position: relative;
	width: 100vw;
	height: 100vh;
	color: $secondary-color;

	.text-container {
		margin: auto;
		position: relative;
		text-align: center;
		width: 50%;
		padding: 1em;

		h1 {
			text-transform: uppercase;
		}
	}
}

// !GAMES

.games-container {
	display: flex;
	flex-direction: column;
	margin: 0 auto;
	margin-top: 5.5em;
	max-width: 960px;
	padding: 0 1em;
	font-size: 1.2em;

	h3 {
		color: $secondary-color;
		text-align: center;
	}

	.game {
		position: relative;
		padding: 1.5em;
		color: $secondary-color;
		margin: 1em 0;
		background-size: cover;
		background-position: 50% 50%;
		border-radius: 3px;

		.overlay {
			position: absolute;
			top: 0;
			left: 0;
			z-index: 1;
			background-color: $overlay-color-dark;
			opacity: 0.8;
			width: 100%;
			height: 100%;
			transition: all 0.3s;
		}

		.game-container {
			display: flex;
			justify-content: space-between;
			position: relative;
			z-index: 10;

			.game-details {
				display: flex;
				flex-direction: column;
			}

			.game-dmg {
				display: flex;
				align-items: center;
				font-size: 3em;
				color: $dmg-color;
			}
		}

		&:hover {

			.overlay {
				opacity: 0.5;
			}
		}

		&.top-game {

			.summoner-info {
				display: flex;
				justify-content: space-between;
				position: relative;
				z-index: 10;
				font-size: 1.6em;

				.region-info {
					font-weight: bold;
				}
			}

			.game-container {

				.game-dmg {
					font-weight: bold;
					font-size: 3.4em;
				}
			}

			&.new {
				border: 2px solid $new-top-color;

				.game-dmg {
					color: $new-top-color;
				}
			}

			&.old {
				border: 2px solid $old-top-color;

				.game-dmg {
					color: $old-top-color;
				}
			}

			&.region {
				border: 2px solid $region-top-color;
			}

			&.global {
				font-size: 1.5em;
				padding: 1em;
			}

		}
	}

	.no-games {
		color: $secondary-color;
		margin: auto;
	}

	.error {
		color: $dmg-color;
		margin: auto;
	}
}

// !FOOTER

footer {
	position: fixed;
	z-index: 100;
	bottom: 0;
	left: 0;
	display: flex;
	justify-content: space-between;
	background-color: $content-color-trans;
	color: $secondary-color;
	width: 100%;
	padding: 0.5em 1em;

	span {
		margin-left: auto;
	}
}

@media only screen and (max-width: 650px) {

	body {
		font-size: 0.9em;
	}

	h1 {
		font-size: 4em;
		letter-spacing: -3px;
	}

	h3 {
		font-size: 1.3em;
	}

	header {
		padding: 0.5em;

		.logo {
			width: 110px;
		}

		ul {
			width: 110px;

			li {

				a {
					span {
						display: none;
					}
				}
			}
		}
	}

	.splash {

		.text-container {
			width: 90%;
		}
	}

	.games-container {
		font-size: 1em;
	}
}

